--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular-devkit/build-angular": "^16.2.6",
     "@angular/cli": "~16.2.6",
     "@angular/compiler-cli": "^16.2.9",
+    "@ngrx/component-store": "^16.3.0",
+    "@ngrx/schematics": "^16.3.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
