--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.9",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^16.2.9",
-    "@angular/compiler": "^16.2.9",
-    "@angular/core": "^16.2.9",
-    "@angular/forms": "^16.2.9",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^16.2.9",
-    "@angular/platform-browser-dynamic": "^16.2.9",
-    "@angular/router": "^16.2.9",
+    "@angular/animations": "^17.2.3",
+    "@angular/cdk": "^17.2.1",
+    "@angular/common": "^17.2.3",
+    "@angular/compiler": "^17.2.3",
+    "@angular/core": "^17.2.3",
+    "@angular/forms": "^17.2.3",
+    "@angular/material": "^17.2.1",
+    "@angular/platform-browser": "^17.2.3",
+    "@angular/platform-browser-dynamic": "^17.2.3",
+    "@angular/router": "^17.2.3",
+    "@ngrx/signals": "^17.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.6",
-    "@angular/cli": "~16.2.6",
-    "@angular/compiler-cli": "^16.2.9",
-    "@ngrx/component-store": "^16.3.0",
-    "@ngrx/schematics": "^16.3.0",
+    "@angular-devkit/build-angular": "^17.2.2",
+    "@angular/cli": "~17.2.2",
+    "@angular/compiler-cli": "^17.2.3",
+    "@ngrx/component-store": "^17.1.1",
+    "@ngrx/schematics": "^17.1.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -37,6 +38,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~5.3.3"
   }
 }
